// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit applications documentation metadata Edit agent (representative) GET /case/123/project-documentation/18/document/456/edit/agent should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter the name of the agent</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"representative\\">Agent name (optional)</label>
            <div id=\\"representative-hint\\" class=\\"govuk-hint\\">There is a limit of 150 characters</div>
            <input class=\\"govuk-input govuk-!-width-two-thirds  \\"
            id=\\"representative\\" name=\\"representative\\" type=\\"text\\" value=\\"Laboris Quis\\"
            aria-describedby=\\"representative-hint\\" maxlength=\\"150\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit agent (representative) POST /case/123/project-documentation/18/document/456/edit/agent should return an error if value length > 150 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#representative\\">The agent name be 150 characters or fewer</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the name of the agent</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"representative\\">Agent name (optional)</label>
            <div id=\\"representative-hint\\" class=\\"govuk-hint\\">There is a limit of 150 characters</div>
            <p id=\\"representative-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The agent name be 150
                characters or fewer</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"representative\\" name=\\"representative\\" type=\\"text\\" value=\\"Laboris Quis\\"
            aria-describedby=\\"representative-hint\\" maxlength=\\"150\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit author GET /case/123/project-documentation/18/document/456/edit/author should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter who the document is from</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"author\\">Document from</label>
            <div id=\\"author-hint\\" class=\\"govuk-hint\\">There is a limit of 150 characters</div>
            <input class=\\"govuk-input govuk-!-width-two-thirds  \\"
            id=\\"author\\" name=\\"author\\" type=\\"text\\" value=\\"Labore et\\" aria-describedby=\\"author-hint\\"
            maxlength=\\"150\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit author POST /case/123/project-documentation/18/document/456/edit/author should return an error if value is not defined 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#author\\">You must enter who the document is from</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter who the document is from</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"author\\">Document from</label>
            <div id=\\"author-hint\\" class=\\"govuk-hint\\">There is a limit of 150 characters</div>
            <p id=\\"author-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> You must enter who the
                document is from</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"author\\" name=\\"author\\" type=\\"text\\" value=\\"Labore et\\" aria-describedby=\\"author-hint\\"
            maxlength=\\"150\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit author POST /case/123/project-documentation/18/document/456/edit/author should return an error if value length > 100 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#author\\">The value must be 150 characters or fewer</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter who the document is from</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"author\\">Document from</label>
            <div id=\\"author-hint\\" class=\\"govuk-hint\\">There is a limit of 150 characters</div>
            <p id=\\"author-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The value must be 150
                characters or fewer</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"author\\" name=\\"author\\" type=\\"text\\" value=\\"Labore et\\" aria-describedby=\\"author-hint\\"
            maxlength=\\"150\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit description GET /case/123/project-documentation/18/document/456/edit/description should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter document description</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"description\\">Description of the document</label>
            <div id=\\"description-hint\\" class=\\"govuk-hint\\">There is a limit of 800 characters</div>
            <input class=\\"govuk-input govuk-!-width-two-thirds  \\"
            id=\\"description\\" name=\\"description\\" type=\\"text\\" value=\\"Laboris nisi ut aliquip ex ea commodo consequat\\"
            aria-describedby=\\"description-hint\\" maxlength=\\"800\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit description POST /case/123/project-documentation/18/document/456/edit/description should return an error if value is not defined 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#description\\">You must enter a description of the document</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter document description</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"description\\">Description of the document</label>
            <div id=\\"description-hint\\" class=\\"govuk-hint\\">There is a limit of 800 characters</div>
            <p id=\\"description-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> You must enter a description
                of the document</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"description\\" name=\\"description\\" type=\\"text\\" value=\\"Laboris nisi ut aliquip ex ea commodo consequat\\"
            aria-describedby=\\"description-hint\\" maxlength=\\"800\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit description POST /case/123/project-documentation/18/document/456/edit/description should return an error if value length > 800 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#description\\">The description must be 800 characters or fewer</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter document description</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"description\\">Description of the document</label>
            <div id=\\"description-hint\\" class=\\"govuk-hint\\">There is a limit of 800 characters</div>
            <p id=\\"description-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The description must
                be 800 characters or fewer</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"description\\" name=\\"description\\" type=\\"text\\" value=\\"Laboris nisi ut aliquip ex ea commodo consequat\\"
            aria-describedby=\\"description-hint\\" maxlength=\\"800\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit document type GET /case/123/project-documentation/18/document/456/edit/type should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Select the document type</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <div class=\\"govuk-radios\\" data-module=\\"govuk-radios\\">
                <div class=\\"govuk-radios__item\\">
                    <input class=\\"govuk-radios__input\\" id=\\"documentType\\" name=\\"documentType\\"
                    type=\\"radio\\" value=\\"Rule 8 letter\\">
                    <label class=\\"govuk-label govuk-radios__label\\" for=\\"documentType\\">Rule 8 letter</label>
                </div>
                <div class=\\"govuk-radios__item\\">
                    <input class=\\"govuk-radios__input\\" id=\\"documentType-2\\" name=\\"documentType\\"
                    type=\\"radio\\" value=\\"Exam library\\">
                    <label class=\\"govuk-label govuk-radios__label\\" for=\\"documentType-2\\">Exam library</label>
                </div>
                <div class=\\"govuk-radios__item\\">
                    <input class=\\"govuk-radios__input\\" id=\\"documentType-3\\" name=\\"documentType\\"
                    type=\\"radio\\" value=\\"\\" checked>
                    <label class=\\"govuk-label govuk-radios__label\\" for=\\"documentType-3\\">No document type</label>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit name GET /case/123/project-documentation/18/document/456/edit/name If user is inspector should not render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h1 class=\\"govuk-heading-xl\\">Sorry, there is a problem with your login</h1>
            <p class=\\"govuk-body\\">You are not permitted to access this URL.</p>
            <p class=\\"govuk-body\\"><a href=\\"https://has-appeal.herokuapp.com/help/contact\\" class=\\"govuk-link\\">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`Edit applications documentation metadata Edit name GET /case/123/project-documentation/18/document/456/edit/name If user is not inspector should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter file name</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"fileName\\">What is the file name?</label>
            <div id=\\"fileName-hint\\" class=\\"govuk-hint\\">There is a limit of 255 characters</div>
            <input class=\\"govuk-input govuk-!-width-two-thirds  \\"
            id=\\"fileName\\" name=\\"fileName\\" type=\\"text\\" value=\\"4 Laboris nisi ut aliquip ex ea\\"
            aria-describedby=\\"fileName-hint\\" maxlength=\\"255\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit name POST /case/123/project-documentation/18/document/456/edit/name should return an error if value is not defined 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#fileName\\">You must enter a file name</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter file name</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"fileName\\">What is the file name?</label>
            <div id=\\"fileName-hint\\" class=\\"govuk-hint\\">There is a limit of 255 characters</div>
            <p id=\\"fileName-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> You must enter a file
                name</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"fileName\\" name=\\"fileName\\" type=\\"text\\" value=\\"4 Laboris nisi ut aliquip ex ea\\"
            aria-describedby=\\"fileName-hint\\" maxlength=\\"255\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit name POST /case/123/project-documentation/18/document/456/edit/name should return an error if value length > 255 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#fileName\\">The name must be 255 characters or fewer</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter file name</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"fileName\\">What is the file name?</label>
            <div id=\\"fileName-hint\\" class=\\"govuk-hint\\">There is a limit of 255 characters</div>
            <p id=\\"fileName-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The name must be 255
                characters or fewer</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"fileName\\" name=\\"fileName\\" type=\\"text\\" value=\\"4 Laboris nisi ut aliquip ex ea\\"
            aria-describedby=\\"fileName-hint\\" maxlength=\\"255\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit published date GET /case/123/project-documentation/18/document/456/edit/published-date should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter the document published date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document published</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.day\\">Day</label>
                        <input class=\\"govuk-input\\" id=\\"datePublished.day\\" name=\\"datePublished.day\\"
                        type=\\"text\\" value=\\"07\\">
                    </div>
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.month\\">Month</label>
                        <input class=\\"govuk-input\\" id=\\"datePublished.month\\" name=\\"datePublished.month\\"
                        type=\\"text\\" value=\\"03\\">
                    </div>
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.year\\">Year</label>
                        <input class=\\"govuk-input\\" id=\\"datePublished.year\\" name=\\"datePublished.year\\"
                        type=\\"text\\" value=\\"2023\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit published date POST /case/123/project-documentation/18/document/456/edit/published-date should return an error if the date fields are empty 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#datePublished\\">Enter the published date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document published date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document published</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter the published date</p>
            <div             class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.day\\">Day</label>
                        <p id=\\"datePublished.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.day\\" name=\\"datePublished.day\\"
                        type=\\"text\\" value=\\"07\\" aria-describedby=\\"datePublished.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.month\\">Month</label>
                        <p id=\\"datePublished.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.month\\"
                        name=\\"datePublished.month\\" type=\\"text\\" value=\\"03\\" aria-describedby=\\"datePublished.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.year\\">Year</label>
                        <p id=\\"datePublished.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.year\\"
                        name=\\"datePublished.year\\" type=\\"text\\" value=\\"2023\\" aria-describedby=\\"datePublished.year-error\\">
                    </div>
                </div>
        </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit published date POST /case/123/project-documentation/18/document/456/edit/published-date should return an error if the date is in the future 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#datePublished\\">The published date cannot be in the future</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document published date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document published</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The published date cannot
                be in the future</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.day\\">Day</label>
                        <p id=\\"datePublished.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.day\\" name=\\"datePublished.day\\"
                        type=\\"text\\" value=\\"07\\" aria-describedby=\\"datePublished.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.month\\">Month</label>
                        <p id=\\"datePublished.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.month\\"
                        name=\\"datePublished.month\\" type=\\"text\\" value=\\"03\\" aria-describedby=\\"datePublished.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.year\\">Year</label>
                        <p id=\\"datePublished.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.year\\"
                        name=\\"datePublished.year\\" type=\\"text\\" value=\\"2023\\" aria-describedby=\\"datePublished.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit published date POST /case/123/project-documentation/18/document/456/edit/published-date should return an error if the day is not valid 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#datePublished\\">Enter a valid day for the published date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document published date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document published</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid day for
                the published date</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.day\\">Day</label>
                        <p id=\\"datePublished.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.day\\" name=\\"datePublished.day\\"
                        type=\\"text\\" value=\\"07\\" aria-describedby=\\"datePublished.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.month\\">Month</label>
                        <p id=\\"datePublished.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.month\\"
                        name=\\"datePublished.month\\" type=\\"text\\" value=\\"03\\" aria-describedby=\\"datePublished.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.year\\">Year</label>
                        <p id=\\"datePublished.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.year\\"
                        name=\\"datePublished.year\\" type=\\"text\\" value=\\"2023\\" aria-describedby=\\"datePublished.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit published date POST /case/123/project-documentation/18/document/456/edit/published-date should return an error if the month is not valid 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#datePublished\\">Enter a valid month for the published date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document published date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document published</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid month for
                the published date</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.day\\">Day</label>
                        <p id=\\"datePublished.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.day\\" name=\\"datePublished.day\\"
                        type=\\"text\\" value=\\"07\\" aria-describedby=\\"datePublished.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.month\\">Month</label>
                        <p id=\\"datePublished.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.month\\"
                        name=\\"datePublished.month\\" type=\\"text\\" value=\\"03\\" aria-describedby=\\"datePublished.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.year\\">Year</label>
                        <p id=\\"datePublished.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.year\\"
                        name=\\"datePublished.year\\" type=\\"text\\" value=\\"2023\\" aria-describedby=\\"datePublished.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit published date POST /case/123/project-documentation/18/document/456/edit/published-date should return an error if the year is not valid 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#datePublished\\">Enter a valid year for the published date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document published date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document published</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid year for
                the published date</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.day\\">Day</label>
                        <p id=\\"datePublished.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.day\\" name=\\"datePublished.day\\"
                        type=\\"text\\" value=\\"07\\" aria-describedby=\\"datePublished.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.month\\">Month</label>
                        <p id=\\"datePublished.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.month\\"
                        name=\\"datePublished.month\\" type=\\"text\\" value=\\"03\\" aria-describedby=\\"datePublished.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"datePublished.year\\">Year</label>
                        <p id=\\"datePublished.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"datePublished.year\\"
                        name=\\"datePublished.year\\" type=\\"text\\" value=\\"2023\\" aria-describedby=\\"datePublished.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit receipt date GET /case/123/project-documentation/18/document/456/edit/receipt-date should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter the document receipt date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document received</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.day\\">Day</label>
                        <input class=\\"govuk-input\\" id=\\"dateCreated.day\\" name=\\"dateCreated.day\\"
                        type=\\"text\\" value=\\"01\\">
                    </div>
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.month\\">Month</label>
                        <input class=\\"govuk-input\\" id=\\"dateCreated.month\\" name=\\"dateCreated.month\\"
                        type=\\"text\\" value=\\"12\\">
                    </div>
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.year\\">Year</label>
                        <input class=\\"govuk-input\\" id=\\"dateCreated.year\\" name=\\"dateCreated.year\\"
                        type=\\"text\\" value=\\"2022\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit receipt date POST /case/123/project-documentation/18/document/456/edit/receipt-date should return an error if the date fields are empty 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#dateCreated\\">Enter the receipt date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document receipt date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document received</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter the receipt date</p>
            <div             class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.day\\">Day</label>
                        <p id=\\"dateCreated.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.day\\" name=\\"dateCreated.day\\"
                        type=\\"text\\" value=\\"01\\" aria-describedby=\\"dateCreated.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.month\\">Month</label>
                        <p id=\\"dateCreated.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.month\\" name=\\"dateCreated.month\\"
                        type=\\"text\\" value=\\"12\\" aria-describedby=\\"dateCreated.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.year\\">Year</label>
                        <p id=\\"dateCreated.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.year\\" name=\\"dateCreated.year\\"
                        type=\\"text\\" value=\\"2022\\" aria-describedby=\\"dateCreated.year-error\\">
                    </div>
                </div>
        </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit receipt date POST /case/123/project-documentation/18/document/456/edit/receipt-date should return an error if the date is in the future 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#dateCreated\\">The receipt date cannot be in the future</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document receipt date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document received</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The receipt date cannot
                be in the future</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.day\\">Day</label>
                        <p id=\\"dateCreated.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.day\\" name=\\"dateCreated.day\\"
                        type=\\"text\\" value=\\"01\\" aria-describedby=\\"dateCreated.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.month\\">Month</label>
                        <p id=\\"dateCreated.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.month\\" name=\\"dateCreated.month\\"
                        type=\\"text\\" value=\\"12\\" aria-describedby=\\"dateCreated.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.year\\">Year</label>
                        <p id=\\"dateCreated.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.year\\" name=\\"dateCreated.year\\"
                        type=\\"text\\" value=\\"2022\\" aria-describedby=\\"dateCreated.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit receipt date POST /case/123/project-documentation/18/document/456/edit/receipt-date should return an error if the day is not valid 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#dateCreated\\">Enter a valid day for the receipt date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document receipt date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document received</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid day for
                the receipt date</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.day\\">Day</label>
                        <p id=\\"dateCreated.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.day\\" name=\\"dateCreated.day\\"
                        type=\\"text\\" value=\\"01\\" aria-describedby=\\"dateCreated.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.month\\">Month</label>
                        <p id=\\"dateCreated.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.month\\" name=\\"dateCreated.month\\"
                        type=\\"text\\" value=\\"12\\" aria-describedby=\\"dateCreated.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.year\\">Year</label>
                        <p id=\\"dateCreated.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.year\\" name=\\"dateCreated.year\\"
                        type=\\"text\\" value=\\"2022\\" aria-describedby=\\"dateCreated.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit receipt date POST /case/123/project-documentation/18/document/456/edit/receipt-date should return an error if the month is not valid 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#dateCreated\\">Enter a valid month for the receipt date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document receipt date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document received</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid month for
                the receipt date</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.day\\">Day</label>
                        <p id=\\"dateCreated.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.day\\" name=\\"dateCreated.day\\"
                        type=\\"text\\" value=\\"01\\" aria-describedby=\\"dateCreated.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.month\\">Month</label>
                        <p id=\\"dateCreated.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.month\\" name=\\"dateCreated.month\\"
                        type=\\"text\\" value=\\"12\\" aria-describedby=\\"dateCreated.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.year\\">Year</label>
                        <p id=\\"dateCreated.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.year\\" name=\\"dateCreated.year\\"
                        type=\\"text\\" value=\\"2022\\" aria-describedby=\\"dateCreated.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit receipt date POST /case/123/project-documentation/18/document/456/edit/receipt-date should return an error if the year is not valid 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#dateCreated\\">Enter a valid year for the receipt date</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the document receipt date</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"submissionDateInternal\\">Date document received</label>
            <div id=\\"submissionDateInternal-hint\\" class=\\"govuk-hint\\">for example, 27 03 2023</div>
            <p id=\\"submissionDateInternal-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a valid year for
                the receipt date</p>
            <div class=\\"govuk-grid-column-one-third\\">
                <div class=\\"govuk-grid-row pins-date-form-group\\">
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.day\\">Day</label>
                        <p id=\\"dateCreated.day-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.day\\" name=\\"dateCreated.day\\"
                        type=\\"text\\" value=\\"01\\" aria-describedby=\\"dateCreated.day-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.month\\">Month</label>
                        <p id=\\"dateCreated.month-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.month\\" name=\\"dateCreated.month\\"
                        type=\\"text\\" value=\\"12\\" aria-describedby=\\"dateCreated.month-error\\">
                    </div>
                    <div class=\\"govuk-form-group govuk-form-group--error\\">
                        <label class=\\"govuk-label govuk-hint\\" for=\\"dateCreated.year\\">Year</label>
                        <p id=\\"dateCreated.year-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span>
                        </p>
                        <input class=\\"govuk-input govuk-input--error\\" id=\\"dateCreated.year\\" name=\\"dateCreated.year\\"
                        type=\\"text\\" value=\\"2022\\" aria-describedby=\\"dateCreated.year-error\\">
                    </div>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit redaction status GET /case/123/project-documentation/18/document/456/edit/redaction should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Select the redaction status</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group\\">
            <div class=\\"govuk-radios\\" data-module=\\"govuk-radios\\">
                <div class=\\"govuk-radios__item\\">
                    <input class=\\"govuk-radios__input\\" id=\\"redactedStatus\\" name=\\"redactedStatus\\"
                    type=\\"radio\\" value=\\"redacted\\">
                    <label class=\\"govuk-label govuk-radios__label\\" for=\\"redactedStatus\\">Redacted</label>
                </div>
                <div class=\\"govuk-radios__item\\">
                    <input class=\\"govuk-radios__input\\" id=\\"redactedStatus-2\\" name=\\"redactedStatus\\"
                    type=\\"radio\\" value=\\"not_redacted\\" checked>
                    <label class=\\"govuk-label govuk-radios__label\\" for=\\"redactedStatus-2\\">Unredacted</label>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit redaction status POST /case/123/project-documentation/18/document/456/edit/redaction should return an error if value is not defined 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#redactedStatus\\">You must select a redaction status</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Select the redaction status</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <p id=\\"redactedStatus-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> You must select a redaction
                status</p>
            <div class=\\"govuk-radios\\" data-module=\\"govuk-radios\\">
                <div class=\\"govuk-radios__item\\">
                    <input class=\\"govuk-radios__input\\" id=\\"redactedStatus\\" name=\\"redactedStatus\\"
                    type=\\"radio\\" value=\\"redacted\\">
                    <label class=\\"govuk-label govuk-radios__label\\" for=\\"redactedStatus\\">Redacted</label>
                </div>
                <div class=\\"govuk-radios__item\\">
                    <input class=\\"govuk-radios__input\\" id=\\"redactedStatus-2\\" name=\\"redactedStatus\\"
                    type=\\"radio\\" value=\\"not_redacted\\" checked>
                    <label class=\\"govuk-label govuk-radios__label\\" for=\\"redactedStatus-2\\">Unredacted</label>
                </div>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit webfilter (filter1) GET /case/123/project-documentation/18/document/456/edit/webfilter should render the page with values 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <h1 class=\\"govuk-heading-l\\"> Enter the webfilter</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group \\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"filter1\\">Webfilter</label>
            <div id=\\"filter1-hint\\" class=\\"govuk-hint\\">There is a limit of 100 characters</div>
            <input class=\\"govuk-input govuk-!-width-two-thirds  \\"
            id=\\"filter1\\" name=\\"filter1\\" type=\\"text\\" value=\\"Dolore magna\\" aria-describedby=\\"filter1-hint\\"
            maxlength=\\"100\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit webfilter (filter1) POST /case/123/project-documentation/18/document/456/edit/webfilter should return an error if value is not defined 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#filter1\\">You must enter a webfilter</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the webfilter</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"filter1\\">Webfilter</label>
            <div id=\\"filter1-hint\\" class=\\"govuk-hint\\">There is a limit of 100 characters</div>
            <p id=\\"filter1-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> You must enter a webfilter</p>
            <input             class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\" id=\\"filter1\\"
            name=\\"filter1\\" type=\\"text\\" value=\\"Dolore magna\\" aria-describedby=\\"filter1-hint\\"
            maxlength=\\"100\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;

exports[`Edit applications documentation metadata Edit webfilter (filter1) POST /case/123/project-documentation/18/document/456/edit/webfilter should return an error if value length > 100 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#filter1\\">The webfilter must be 100 characters or fewer</a>
                        </li>
                    </ul>
                </div>
            </div>
        </div>
    </div>
    <h1 class=\\"govuk-heading-l\\"> Enter the webfilter</h1>
    <form method=\\"post\\" action=\\"\\" novalidate=\\"novalidate\\" class=\\"pins-applications-create\\">
        <div class=\\"govuk-form-group govuk-form-group--error\\">
            <label class=\\"govuk-label font-weight--700\\" for=\\"filter1\\">Webfilter</label>
            <div id=\\"filter1-hint\\" class=\\"govuk-hint\\">There is a limit of 100 characters</div>
            <p id=\\"filter1-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> The webfilter must be
                100 characters or fewer</p>
            <input class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\"
            id=\\"filter1\\" name=\\"filter1\\" type=\\"text\\" value=\\"Dolore magna\\" aria-describedby=\\"filter1-hint\\"
            maxlength=\\"100\\">
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half\\">
                <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and return</button>
            </div>
        </div>
    </form>
</main>"
`;
